force-app/core/main/default/objects/Account/fields/Access_to_EHR__c.field-meta.xml
<CustomField>
    <fullName>Access_to_EHR__c</fullName>
    <label>Access to EHR mo test 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Granted</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>