force-app/core/main/default/objects/Account/fields/AccMigrated__c.field-meta.xml
<CustomField>
    <fullName>AccMigrated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AccMigrated</label>
    <type>Checkbox</type>
</CustomField>