force-app/core/main/default/objects/Account/fields/Account_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Account_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the campaign which is the source of the patient. The patient may not be part or member of this campaign.</inlineHelpText>
    <label>Account Campaign Source</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>