force-app/core/main/default/objects/Account/fields/Account_Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Facility_Type__c</fullName>
    <description>This describes the Facility of the Account</description>
    <label>Account_Facility_Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accounting firm</fullName>
            </value>
            <value>
                <fullName>Advertising Agency</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>BOARD _Advisory</fullName>
            </value>
            <value>
                <fullName>Board of Directors (BOD)</fullName>
            </value>
            <value>
                <fullName>Business office</fullName>
            </value>
            <value>
                <fullName>Charitable Organizaton</fullName>
            </value>
            <value>
                <fullName>Church</fullName>
            </value>
            <value>
                <fullName>Committee_AdHoc</fullName>
            </value>
            <value>
                <fullName>Committee_Executive</fullName>
            </value>
            <value>
                <fullName>Consulting Company</fullName>
            </value>
            <value>
                <fullName>Dental Clinic</fullName>
            </value>
            <value>
                <fullName>Department of company</fullName>
            </value>
            <value>
                <fullName>Fitness Center</fullName>
            </value>
            <value>
                <fullName>Cancer Center</fullName>
                <label>H-Cancer Center</label>
            </value>
            <value>
                <fullName>Clinic</fullName>
                <label>H-Clinic</label>
            </value>
            <value>
                <fullName>Dermatology Center</fullName>
                <label>H-Dermatology Center</label>
            </value>
            <value>
                <fullName>Dialysis Access Center</fullName>
                <label>H-Dialysis Access Center</label>
            </value>
            <value>
                <fullName>Dialysis Center</fullName>
                <label>H-Dialysis Center</label>
            </value>
            <value>
                <fullName>healthcare staffing</fullName>
            </value>
            <value>
                <fullName>Home Health Care</fullName>
                <label>H-Home Health Care</label>
            </value>
            <value>
                <fullName>Hospital</fullName>
                <label>H-Hospital</label>
            </value>
            <value>
                <fullName>Hospital-LTAC_Long_term_Acute_CAre</fullName>
                <label>H-Hospital-LTAC_Long_term_Acute_CAre</label>
            </value>
            <value>
                <fullName>Imaging Center</fullName>
                <label>H-Imaging Center</label>
            </value>
            <value>
                <fullName>Independent Living</fullName>
                <label>H-Independent Living</label>
            </value>
            <value>
                <fullName>Hiotel</fullName>
            </value>
            <value>
                <fullName>Long Term Nursing Facility</fullName>
                <label>H-Long Term Nursing Facility</label>
            </value>
            <value>
                <fullName>Nursing Home</fullName>
                <label>H-Nursing Home</label>
            </value>
            <value>
                <fullName>Office Based Lab</fullName>
                <label>H-Office Based Lab</label>
            </value>
            <value>
                <fullName>H-Payer Carrier Health Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>