force-app/core/main/default/objects/Account/fields/Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type__c</fullName>
    <defaultValue>$RecordType.Name</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Record Type</label>
    <length>254</length>
    <type>Text</type>
</CustomField>