force-app/core/main/default/objects/Account/fields/Accounts_Payable_Rep__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Payable_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounts Payable Rep</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Billing Rep)</relationshipLabel>
    <relationshipName>Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>