force-app/core/main/default/objects/Account/fields/Acct_MIMIT_Team_Membership__c.field-meta.xml
<CustomField>
    <fullName>Acct_MIMIT_Team_Membership__c</fullName>
    <description>This field describes whether this account (company / department) is part of a MIMIT team and which one</description>
    <inlineHelpText>Select the MIMIT team that this  this account (company / department) participates in</inlineHelpText>
    <label>Acct_MIMIT_Team Membership</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Team_Membership</valueSetName>
    </valueSet>
</CustomField>