force-app/core/main/default/objects/Account/fields/Active_Date__c.field-meta.xml
<CustomField>
    <fullName>Active_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Active Date</label>
    <type>Date</type>
</CustomField>