force-app/core/main/default/objects/Account/fields/Additional_Insurance_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Additional_Insurance_Company_Code__c</fullName>
    <description>Payer Id code, coming from advancedMD via EHR integration</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Payer Id code, coming from advancedMD via EHR integration</inlineHelpText>
    <label>AdvancedMD Payer ID Code</label>
    <length>254</length>
    <type>Text</type>
</CustomField>