force-app/core/main/default/objects/Account/fields/Administrator__c.field-meta.xml
<CustomField>
    <fullName>Administrator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Administrator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Companies/ Departments (Administrator)</relationshipLabel>
    <relationshipName>AdminitratorAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>