force-app/core/main/default/objects/Account/fields/ADON__c.field-meta.xml
<CustomField>
    <fullName>ADON__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ADON</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (ADON)</relationshipLabel>
    <relationshipName>ADON</relationshipName>
    <type>Lookup</type>
</CustomField>