force-app/core/main/default/objects/Account/fields/AdvncdMD_Facility__c.field-meta.xml
<CustomField>
    <fullName>AdvncdMD_Facility__c</fullName>
    <description>Code assigned by AdvancedM to a medical Facilty.
Only 5 characters</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AdvancedMD Facility code</label>
    <length>5</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>