force-app/core/main/default/objects/Account/fields/Alert_Notes__c.field-meta.xml
<CustomField>
    <fullName>Alert_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Alert Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>