force-app/core/main/default/objects/Account/fields/ALERT_notes_Company_Account__c.field-meta.xml
<CustomField>
    <fullName>ALERT_notes_Company_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ALERT notes Company Account</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>