force-app/core/main/default/objects/Account/fields/Atlantis_CIN__c.field-meta.xml
<CustomField>
    <fullName>Atlantis_CIN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>COMPANY (Account) is associated with the Atlantis CIN network</description>
    <inlineHelpText>Click this yes if this COMPANY  has any association with the CIN network. Could be a physician, Nurse, patient or another member of this COMPANY who has some connection with the Atlantis CIN</inlineHelpText>
    <label>Atlantis CIN associate</label>
    <type>Checkbox</type>
</CustomField>