force-app/core/main/default/objects/Account/fields/Attending_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Attending_Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Please check and update EHR to see attending doctor is correct and click save</description>
    <inlineHelpText>Please check and update EHR to see attending doctor is correct and click save</inlineHelpText>
    <label>EHR Attending Doctor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Companies/ Departments (Attending Doctor)</relationshipLabel>
    <relationshipName>Companies_Departments</relationshipName>
    <type>Lookup</type>
</CustomField>