force-app/core/main/default/objects/Account/fields/Attending_Doctor_HL7Code__c.field-meta.xml
<CustomField>
    <fullName>Attending_Doctor_HL7Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Attending Doctor HL7Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>