force-app/core/main/default/objects/Account/fields/Business_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_ID__c</fullName>
    <description>This field is used for relating the person account to SNF account in Marketing cloud.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Business ID</label>
    <length>254</length>
    <type>Text</type>
</CustomField>