force-app/core/main/default/objects/Account/fields/Calculated_Dob__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Dob__c</fullName>
    <formula>IF (PersonBirthdate= null,
null,
IF( DATE( 2000 , MONTH( PersonBirthdate) , DAY( PersonBirthdate) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() )) ,
&quot; ( &quot;&amp; TEXT(YEAR (Today()) - YEAR ( PersonBirthdate))&amp; &quot; Years &quot;,
&quot; ( &quot;&amp; TEXT(YEAR (Today()) - YEAR ( PersonBirthdate) -1 ) &amp; &quot; Years &quot;))
&amp;
IF (PersonBirthdate= null,
null,
IF( MONTH (Today()) = MONTH (PersonBirthdate),
IF(DAY(TODAY()) &gt;= DAY(PersonBirthdate), &quot;)&quot;, &quot; 11 Months )&quot;),
IF(MONTH(PersonBirthdate) &gt; MONTH(TODAY()),
IF(DAY(TODAY()) &gt;= DAY(PersonBirthdate),
TEXT(12 - (MONTH( PersonBirthdate) - MONTH(TODAY())))&amp;  &quot; Months ) &quot;,
TEXT(12 - ((MONTH( PersonBirthdate) - MONTH(TODAY())) + 1 ) )&amp;  &quot; Months ) &quot;),
IF(DAY(TODAY()) &gt;= DAY(PersonBirthdate),
TEXT(12 - MONTH(PersonBirthdate) - MONTH(TODAY()))&amp;  &quot; Months ) &quot;,
TEXT(12 - MONTH(PersonBirthdate) - MONTH(TODAY())  - 1 )&amp;  &quot; Months ) &quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated_Dob</label>
    <type>Text</type>
</CustomField>