force-app/core/main/default/objects/Account/fields/Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign ID</label>
    <length>254</length>
    <type>Text</type>
</CustomField>