force-app/core/main/default/objects/Account/fields/CaseSafe_Acc_Id__c.field-meta.xml
<CustomField>
    <fullName>CaseSafe_Acc_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseSafe Acc Id</label>
    <type>Text</type>
</CustomField>