force-app/core/main/default/objects/Account/fields/certification_number__c.field-meta.xml
<CustomField>
    <fullName>certification_number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Certification Number</label>
    <length>254</length>
    <type>Text</type>
</CustomField>