force-app/core/main/default/objects/Account/fields/CHC_Payer_ID_CPID__c.field-meta.xml
<CustomField>
    <fullName>CHC_Payer_ID_CPID__c</fullName>
    <description>CPID, or Claims Payer ID, refers to the unique identification number assigned to each insurance payer or healthcare plan. It helps identify the payer when submitting claims for reimbursement of funds.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>CPID, or Claims Payer ID, refers to the unique identification number assigned to each insurance payer or healthcare plan. It helps identify the payer when submitting claims for reimbursement of funds.</inlineHelpText>
    <label>CHC Payer ID (CPID)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>