force-app/core/main/default/objects/Account/fields/Collectable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Collectable_Amount__c</fullName>
    <label>Collectable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>