force-app/core/main/default/objects/Account/fields/community_living_beds__c.field-meta.xml
<CustomField>
    <fullName>community_living_beds__c</fullName>
    <label>community_living_beds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>