force-app/core/main/default/objects/Account/fields/ConId__c.field-meta.xml
<CustomField>
    <fullName>ConId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ConId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>