force-app/core/main/default/objects/Account/fields/Consent_provided_by__c.field-meta.xml
<CustomField>
    <fullName>Consent_provided_by__c</fullName>
    <label>Consent provided by</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Consent_for_Care_given_by</valueSetName>
    </valueSet>
</CustomField>