force-app/core/main/default/objects/Account/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Emergency Contact 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Companies/ Departments (Emergency Contact 1)</relationshipLabel>
    <relationshipName>Companies_Departments2</relationshipName>
    <type>Lookup</type>
</CustomField>