force-app/core/main/default/objects/Account/fields/county__c.field-meta.xml
<CustomField>
    <fullName>county__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>county</label>
    <length>254</length>
    <type>Text</type>
</CustomField>