force-app/core/main/default/objects/Account/fields/CPID__c.field-meta.xml
<CustomField>
    <fullName>CPID__c</fullName>
    <description>Claims Payer Identification</description>
    <inlineHelpText>Claims Payer Identification</inlineHelpText>
    <label>CPID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>