force-app/core/main/default/objects/Account/fields/credit_limit__c.field-meta.xml
<CustomField>
    <fullName>credit_limit__c</fullName>
    <description>credit limit provided</description>
    <label>credit_limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>