force-app/core/main/default/objects/Account/fields/Customer_RATING__c.field-meta.xml
<CustomField>
    <fullName>Customer_RATING__c</fullName>
    <label>Customer_RATING</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MIMIT_Customer_RATING</valueSetName>
    </valueSet>
</CustomField>