force-app/core/main/default/objects/Account/fields/Department_Type__c.field-meta.xml
<CustomField>
    <fullName>Department_Type__c</fullName>
    <inlineHelpText>Only for Corporate Entites and not plans</inlineHelpText>
    <label>Department Function</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Department_Type</valueSetName>
    </valueSet>
</CustomField>