force-app/core/main/default/objects/Account/fields/DON__c.field-meta.xml
<CustomField>
    <fullName>DON__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DON</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Companies/ Departments (DON)</relationshipLabel>
    <relationshipName>DON</relationshipName>
    <type>Lookup</type>
</CustomField>