force-app/core/main/default/objects/Account/fields/Ecommerce_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Ecommerce_Email_ID__c</fullName>
    <formula>wk_bigcomm__Bigcomm_Email_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ecommerce Email ID</label>
    <type>Text</type>
</CustomField>