force-app/core/main/default/objects/Account/fields/EDI_Status__c.field-meta.xml
<CustomField>
    <fullName>EDI_Status__c</fullName>
    <description>Electronic Data Interchange for EMR systems to track claims logging</description>
    <label>EDI Setup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>