force-app/core/main/default/objects/Account/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <description>Employer Identification Number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>