force-app/core/main/default/objects/Account/fields/Emergency_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Emergency Contact 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Companies/ Departments (Emergency Contact 2)</relationshipLabel>
    <relationshipName>Companies_Departments3</relationshipName>
    <type>Lookup</type>
</CustomField>