force-app/core/main/default/objects/Account/fields/Emergency_Contact_3__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Emergency Contact 3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Companies/ Departments (Emergency Contact 3)</relationshipLabel>
    <relationshipName>Companies_Departments4</relationshipName>
    <type>Lookup</type>
</CustomField>