force-app/core/main/default/objects/Account/fields/Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>Employer_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>