force-app/core/main/default/objects/Account/fields/EMR_Data_Transfer__c.field-meta.xml
<CustomField>
    <fullName>EMR_Data_Transfer__c</fullName>
    <label>EMR Data Transfer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data in Medstreaming</fullName>
                <default>true</default>
                <label>Data in Medstreaming</label>
            </value>
            <value>
                <fullName>Data Transferred to AdvancedMD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>