force-app/core/main/default/objects/Account/fields/expiration_date__c.field-meta.xml
<CustomField>
    <fullName>expiration_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>expiration_date</label>
    <type>Date</type>
</CustomField>