force-app/core/main/default/objects/Account/fields/Facebook_Weblink__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Weblink__c</fullName>
    <description>weblink of Facebook profile</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Facebook Weblink</label>
    <type>Url</type>
</CustomField>