force-app/core/main/default/objects/Account/fields/facility_id__c.field-meta.xml
<CustomField>
    <fullName>facility_id__c</fullName>
    <label>facility_ids</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>