force-app/core/main/default/objects/Account/fields/Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>Facility_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which Nursing Home, Hospital and Home Visit</description>
    <inlineHelpText>Patient&apos;s current location</inlineHelpText>
    <label>Current Facility Name</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>contains</operation>
            <value>SNF</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patient List</relationshipLabel>
    <relationshipName>Companies_Departments</relationshipName>
    <type>Lookup</type>
</CustomField>