force-app/core/main/default/objects/Account/fields/Facility_Name_ID__c.field-meta.xml
<CustomField>
    <fullName>Facility_Name_ID__c</fullName>
    <formula>Facility_Name__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility Name _ID</label>
    <type>Text</type>
</CustomField>