force-app/core/main/default/objects/Account/fields/facility_status__c.field-meta.xml
<CustomField>
    <fullName>facility_status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>facility_status</label>
    <length>254</length>
    <type>Text</type>
</CustomField>