force-app/core/main/default/objects/Account/fields/fieldImport__c.field-meta.xml
<CustomField>
    <fullName>fieldImport__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>fieldImport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>