force-app/core/main/default/objects/Account/fields/GenCPId__c.field-meta.xml
<CustomField>
    <fullName>GenCPId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GenCPId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>