force-app/core/main/default/objects/Account/fields/Geographical_Area__c.field-meta.xml
<CustomField>
    <fullName>Geographical_Area__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Geographical Area</label>
    <length>50</length>
    <type>Text</type>
</CustomField>