force-app/core/main/default/objects/Account/fields/Group_SIze__c.field-meta.xml
<CustomField>
    <fullName>Group_SIze__c</fullName>
    <label>Group SIzez</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>solo</fullName>
            </value>
            <value>
                <fullName>1-4</fullName>
            </value>
            <value>
                <fullName>4-20</fullName>
            </value>
            <value>
                <fullName>20+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>