force-app/core/main/default/objects/Account/fields/Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Guarantor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EHR Guarantor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Companies/ Departments (Guarantor)</relationshipLabel>
    <relationshipName>Companies_Departments1</relationshipName>
    <type>Lookup</type>
</CustomField>