force-app/core/main/default/objects/Account/fields/Health_PLAN_Network_status_for_MIMIT__c.field-meta.xml
<CustomField>
    <fullName>Health_PLAN_Network_status_for_MIMIT__c</fullName>
    <description>In network
Out of network
Unknown</description>
    <label>Health PLAN Network status for MIMIT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In network</fullName>
            </value>
            <value>
                <fullName>Out of network</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>