force-app/core/main/default/objects/Account/fields/Healthcare_Organization_Type__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Organization_Type__c</fullName>
    <label>Healthcare Organization Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical Clinic</fullName>
            </value>
            <value>
                <fullName>Community medical center</fullName>
            </value>
            <value>
                <fullName>Academic and Research</fullName>
            </value>
            <value>
                <fullName>Hospital- Community</fullName>
            </value>
            <value>
                <fullName>Hospital- Safety net - inner city</fullName>
            </value>
            <value>
                <fullName>Hospital- Teritary Care</fullName>
            </value>
            <value>
                <fullName>Home Health</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Office based_Lab</fullName>
            </value>
            <value>
                <fullName>Ambulatory_Surgery_Center</fullName>
            </value>
            <value>
                <fullName>SNF_Skilled_nursing_Facility</fullName>
            </value>
            <value>
                <fullName>Hospital-LTAC_Long_term_Acute_CAre</fullName>
            </value>
            <value>
                <fullName>Military - Veterans Affairs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>