force-app/core/main/default/objects/Account/fields/Healthcare_Test__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Test__c</fullName>
    <label>Healthcare Test</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>