force-app/core/main/default/objects/Account/fields/HealthCloudGA__Active__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Active__c</fullName>
    <label>Active</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>in progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>