force-app/core/main/default/objects/Account/fields/Home_Address__c.field-meta.xml
<CustomField>
    <fullName>Home_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Home Address</label>
    <type>Address</type>
</CustomField>