force-app/core/main/default/objects/Account/fields/In_House_APN__c.field-meta.xml
<CustomField>
    <fullName>In_House_APN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>In House APN</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Providers MD / NPP_Contact_MIMIT</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (In House APN)</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>