force-app/core/main/default/objects/Account/fields/Individual_account_relationship__c.field-meta.xml
<CustomField>
    <fullName>Individual_account_relationship__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Individual account relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>