force-app/core/main/default/objects/Account/fields/Inpatient_Admission_Date__c.field-meta.xml
<CustomField>
    <fullName>Inpatient_Admission_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inpatient Admission Date</label>
    <type>DateTime</type>
</CustomField>