force-app/core/main/default/objects/Account/fields/Insurance_Balance1__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Balance1__c</fullName>
    <label>Insurance Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>