force-app/core/main/default/objects/Account/fields/Insurance_Company_Address__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insurance Company Address</label>
    <length>254</length>
    <type>Text</type>
</CustomField>