force-app/core/main/default/objects/Account/fields/Insurance_Group_ID_Non_EHR__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Group_ID_Non_EHR__c</fullName>
    <description>Group ID of the patient&apos;s insurance.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the patient insurance group ID number?</inlineHelpText>
    <label>Insurance Group ID (Non-EHR)</label>
    <length>32</length>
    <type>Text</type>
</CustomField>