force-app/core/main/default/objects/Account/fields/Insurance_Member_ID_Non_EHR__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Member_ID_Non_EHR__c</fullName>
    <description>Member ID of the patient&apos;s insurance.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the patient insurance member ID?</inlineHelpText>
    <label>Insurance Member ID (Non-EHR)</label>
    <length>32</length>
    <type>Text</type>
</CustomField>